--- a/css/scss/layout/_body.scss
+++ b/css/scss/layout/_body.scss
@@ -2,6 +2,9 @@ html, body {
   overflow-x: hidden;
   overflow-y: hidden;
 }
+html, .scroll {
+  overflow: hidden visible;
+}
 
 
 body {
